--- a/Regresión/Regresion_Bajas_Antiguedad.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad.ipynb
@@ -50,7 +50,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 24,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -66,7 +66,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "y_VVpj56uzRV",
-        "outputId": "c4492d7a-f730-4aa2-c424-b9de4f0440bf",
+        "outputId": "ccf59327-b242-49e3-a2c6-bfd29824c556",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -76,7 +76,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 25,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,14 +97,14 @@
         "x = data1.iloc [:,:-1].values\n",
         "y = data1.iloc [:,2].values"
       ],
-      "execution_count": 26,
+      "execution_count": 43,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "EYca9i97JQXc",
-        "outputId": "925a9352-c817-404d-b4a8-50917a70560d",
+        "outputId": "b34f767a-6a09-4104-aa5d-8430f15a9735",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -113,7 +113,7 @@
       "source": [
         "x"
       ],
-      "execution_count": 27,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -206,7 +206,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 27
+          "execution_count": 46
         }
       ]
     },
@@ -284,7 +284,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size= 0.2, random_state=0)"
       ],
-      "execution_count": 28,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -474,7 +474,18 @@
         "id": "dwwzroSL4J3G"
       },
       "source": [
-        "pd.DataFrame(lineal_poly.predict(x_poly))"
+        "y_predic_poly=lineal_poly.predict(x_poly)"
+      ],
+      "execution_count": 60,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "m3dR-l-3lXLq"
+      },
+      "source": [
+        "pd.DataFrame(y_predic_poly)"
       ],
       "execution_count": null,
       "outputs": []
@@ -482,184 +493,43 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xx7RR2QsIKdx",
-        "outputId": "a7547c41-cc19-4520-85e8-2b71f58ce280",
+        "id": "pUe02GH8nJty",
+        "outputId": "767e78fc-4df5-44aa-8a8a-3d14924c3d33",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 419
+          "height": 323
         }
       },
       "source": [
-        "pd.DataFrame(x_poly)"
+        "from sklearn.metrics import accuracy_score\n",
+        "print(lineal_poly.score(y_train.reshape(1, -1), y_predic_poly))"
       ],
-      "execution_count": 286,
+      "execution_count": 61,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>0</th>\n",
-              "      <th>1</th>\n",
-              "      <th>2</th>\n",
-              "      <th>3</th>\n",
-              "      <th>4</th>\n",
-              "      <th>5</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>1.0</td>\n",
-              "      <td>202007.0</td>\n",
-              "      <td>7.0</td>\n",
-              "      <td>4.080683e+10</td>\n",
-              "      <td>1414049.0</td>\n",
-              "      <td>49.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>1.0</td>\n",
-              "      <td>202003.0</td>\n",
-              "      <td>3.0</td>\n",
-              "      <td>4.080521e+10</td>\n",
-              "      <td>606009.0</td>\n",
-              "      <td>9.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>1.0</td>\n",
-              "      <td>202002.0</td>\n",
-              "      <td>3.0</td>\n",
-              "      <td>4.080481e+10</td>\n",
-              "      <td>606006.0</td>\n",
-              "      <td>9.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>1.0</td>\n",
-              "      <td>201909.0</td>\n",
-              "      <td>5.0</td>\n",
-              "      <td>4.076724e+10</td>\n",
-              "      <td>1009545.0</td>\n",
-              "      <td>25.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>1.0</td>\n",
-              "      <td>201908.0</td>\n",
-              "      <td>2.0</td>\n",
-              "      <td>4.076684e+10</td>\n",
-              "      <td>403816.0</td>\n",
-              "      <td>4.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>60</th>\n",
-              "      <td>1.0</td>\n",
-              "      <td>202008.0</td>\n",
-              "      <td>7.0</td>\n",
-              "      <td>4.080723e+10</td>\n",
-              "      <td>1414056.0</td>\n",
-              "      <td>49.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>61</th>\n",
-              "      <td>1.0</td>\n",
-              "      <td>202006.0</td>\n",
-              "      <td>4.0</td>\n",
-              "      <td>4.080642e+10</td>\n",
-              "      <td>808024.0</td>\n",
-              "      <td>16.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>62</th>\n",
-              "      <td>1.0</td>\n",
-              "      <td>202006.0</td>\n",
-              "      <td>5.0</td>\n",
-              "      <td>4.080642e+10</td>\n",
-              "      <td>1010030.0</td>\n",
-              "      <td>25.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>63</th>\n",
-              "      <td>1.0</td>\n",
-              "      <td>202003.0</td>\n",
-              "      <td>5.0</td>\n",
-              "      <td>4.080521e+10</td>\n",
-              "      <td>1010015.0</td>\n",
-              "      <td>25.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>64</th>\n",
-              "      <td>1.0</td>\n",
-              "      <td>202003.0</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>4.080521e+10</td>\n",
-              "      <td>202003.0</td>\n",
-              "      <td>1.0</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>65 rows × 6 columns</p>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "      0         1    2             3          4     5\n",
-              "0   1.0  202007.0  7.0  4.080683e+10  1414049.0  49.0\n",
-              "1   1.0  202003.0  3.0  4.080521e+10   606009.0   9.0\n",
-              "2   1.0  202002.0  3.0  4.080481e+10   606006.0   9.0\n",
-              "3   1.0  201909.0  5.0  4.076724e+10  1009545.0  25.0\n",
-              "4   1.0  201908.0  2.0  4.076684e+10   403816.0   4.0\n",
-              "..  ...       ...  ...           ...        ...   ...\n",
-              "60  1.0  202008.0  7.0  4.080723e+10  1414056.0  49.0\n",
-              "61  1.0  202006.0  4.0  4.080642e+10   808024.0  16.0\n",
-              "62  1.0  202006.0  5.0  4.080642e+10  1010030.0  25.0\n",
-              "63  1.0  202003.0  5.0  4.080521e+10  1010015.0  25.0\n",
-              "64  1.0  202003.0  1.0  4.080521e+10   202003.0   1.0\n",
-              "\n",
-              "[65 rows x 6 columns]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 286
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-61-755b72dc742d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetrics\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0maccuracy_score\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlineal_poly\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_predic_poly\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/base.py\u001b[0m in \u001b[0;36mscore\u001b[0;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[1;32m    420\u001b[0m         \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0mmetrics\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mr2_score\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    421\u001b[0m         \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0mmetrics\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_regression\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0m_check_reg_targets\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 422\u001b[0;31m         \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    423\u001b[0m         \u001b[0;31m# XXX: Remove the check in 0.23\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    424\u001b[0m         \u001b[0my_type\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_check_reg_targets\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_base.py\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    223\u001b[0m             \u001b[0mReturns\u001b[0m \u001b[0mpredicted\u001b[0m \u001b[0mvalues\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    224\u001b[0m         \"\"\"\n\u001b[0;32m--> 225\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_decision_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    226\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    227\u001b[0m     \u001b[0m_preprocess_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstaticmethod\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_preprocess_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_base.py\u001b[0m in \u001b[0;36m_decision_function\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    207\u001b[0m         \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheck_array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccept_sparse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'csr'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'csc'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'coo'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    208\u001b[0m         return safe_sparse_dot(X, self.coef_.T,\n\u001b[0;32m--> 209\u001b[0;31m                                dense_output=True) + self.intercept_\n\u001b[0m\u001b[1;32m    210\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    211\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/utils/extmath.py\u001b[0m in \u001b[0;36msafe_sparse_dot\u001b[0;34m(a, b, dense_output)\u001b[0m\n\u001b[1;32m    149\u001b[0m             \u001b[0mret\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    150\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 151\u001b[0;31m         \u001b[0mret\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    152\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    153\u001b[0m     if (sparse.issparse(a) and sparse.issparse(b)\n",
+            "\u001b[0;31mValueError\u001b[0m: matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 6 is different from 65)"
+          ]
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FPVQ5suz5izx"
+        "id": "oJpBRQ0YULM8"
       },
       "source": [
-        "pd.DataFrame(y_train)"
+        "y_predic_poly= lineal_poly.predict([[1,202009,5,(202009*5)),(5*2)]])"
       ],
       "execution_count": null,
       "outputs": []
