--- a/Regresión/Regresion_Bajas_Antiguedad.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad.ipynb
@@ -50,7 +50,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 41,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -66,7 +66,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "y_VVpj56uzRV",
-        "outputId": "ccf59327-b242-49e3-a2c6-bfd29824c556",
+        "outputId": "814e5456-6a37-4701-bab4-7c219fb9440d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -76,12 +76,12 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 42,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ],
           "name": "stdout"
         }
@@ -93,122 +93,23 @@
         "id": "0JYqth2Ty8-k"
       },
       "source": [
-        "data1 = pd.read_csv('/content/drive/My Drive/Dataset/DBajas_ANTIGUEDAD2.txt',delimiter='~')\n",
+        "data1 = pd.read_csv('/content/drive/My Drive/Dataset/DBajas_ANTIGUEDAD.txt',delimiter='~')\n",
         "x = data1.iloc [:,:-1].values\n",
         "y = data1.iloc [:,2].values"
       ],
-      "execution_count": 43,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EYca9i97JQXc",
-        "outputId": "b34f767a-6a09-4104-aa5d-8430f15a9735",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        }
+        "id": "EYca9i97JQXc"
       },
       "source": [
         "x"
       ],
-      "execution_count": 46,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[201908,      5],\n",
-              "       [201908,      3],\n",
-              "       [201908,      4],\n",
-              "       [201908,      2],\n",
-              "       [201908,      1],\n",
-              "       [201908,      6],\n",
-              "       [201909,      5],\n",
-              "       [201909,      3],\n",
-              "       [201909,      6],\n",
-              "       [201909,      2],\n",
-              "       [201909,      4],\n",
-              "       [201909,      1],\n",
-              "       [201910,      5],\n",
-              "       [201910,      3],\n",
-              "       [201910,      7],\n",
-              "       [201910,      4],\n",
-              "       [201910,      2],\n",
-              "       [201910,      6],\n",
-              "       [201910,      1],\n",
-              "       [201911,      5],\n",
-              "       [201911,      4],\n",
-              "       [201911,      6],\n",
-              "       [201911,      3],\n",
-              "       [201911,      1],\n",
-              "       [201911,      2],\n",
-              "       [201912,      5],\n",
-              "       [201912,      1],\n",
-              "       [201912,      6],\n",
-              "       [201912,      3],\n",
-              "       [201912,      4],\n",
-              "       [201912,      2],\n",
-              "       [202001,      3],\n",
-              "       [202001,      4],\n",
-              "       [202001,      2],\n",
-              "       [202001,      6],\n",
-              "       [202001,      5],\n",
-              "       [202001,      1],\n",
-              "       [202002,      4],\n",
-              "       [202002,      3],\n",
-              "       [202002,      1],\n",
-              "       [202002,      2],\n",
-              "       [202002,      5],\n",
-              "       [202002,      6],\n",
-              "       [202003,      2],\n",
-              "       [202003,      1],\n",
-              "       [202003,      4],\n",
-              "       [202003,      6],\n",
-              "       [202003,      5],\n",
-              "       [202003,      3],\n",
-              "       [202004,      1],\n",
-              "       [202004,      4],\n",
-              "       [202004,      2],\n",
-              "       [202004,      5],\n",
-              "       [202004,      6],\n",
-              "       [202004,      3],\n",
-              "       [202005,      2],\n",
-              "       [202005,      4],\n",
-              "       [202005,      5],\n",
-              "       [202005,      1],\n",
-              "       [202005,      3],\n",
-              "       [202005,      6],\n",
-              "       [202006,      3],\n",
-              "       [202006,      2],\n",
-              "       [202006,      1],\n",
-              "       [202006,      5],\n",
-              "       [202006,      7],\n",
-              "       [202006,      6],\n",
-              "       [202006,      4],\n",
-              "       [202007,      3],\n",
-              "       [202007,      5],\n",
-              "       [202007,      6],\n",
-              "       [202007,      1],\n",
-              "       [202007,      2],\n",
-              "       [202007,      4],\n",
-              "       [202007,      7],\n",
-              "       [202008,      6],\n",
-              "       [202008,      5],\n",
-              "       [202008,      3],\n",
-              "       [202008,      7],\n",
-              "       [202008,      2],\n",
-              "       [202008,      1],\n",
-              "       [202008,      4]])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 46
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -284,7 +185,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size= 0.2, random_state=0)"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -308,7 +209,7 @@
         "x_train= sc_x.fit_transform(x_train)\n",
         "y_train= sc_y.fit_transform(y_train.reshape(-1,1))'''"
       ],
-      "execution_count": 224,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -439,7 +340,7 @@
         "lineal_poly = LinearRegression()\n",
         "lineal_poly.fit(x_poly,y_train)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -465,7 +366,7 @@
         "y_valor= sc_y.inverse_transform(y_train)\n",
         "y_predic_valor= sc_y.inverse_transform(regression.predict(x_train))'''"
       ],
-      "execution_count": 226,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -476,7 +377,7 @@
       "source": [
         "y_predic_poly=lineal_poly.predict(x_poly)"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -504,7 +405,7 @@
         "from sklearn.metrics import accuracy_score\n",
         "print(lineal_poly.score(y_train.reshape(1, -1), y_predic_poly))"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
